--- a/functions/package.json
+++ b/functions/package.json
@@ -12,8 +12,12 @@
     "node": "8"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "firebase": "^7.4.0",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "validate": "^5.1.0",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
